spacing fix

--- a/tabletop.css
+++ b/tabletop.css
@@ -11,7 +11,7 @@ body {
     width: 616px;
     height: 320px;
     /*border: black 1px;*/
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 
 .text-intro {
@@ -73,7 +73,7 @@ a:hover {
     margin-top: 50px;
     width: 620px;
     height: 390px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .tokens img{
